# Neural-Studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_BUILD.md  build  compile_commands.json  repostructure.md
core/: CMakeLists.txt
core/include/: IPCServer.h
core/lib/media/: MediaSource.h
core/lib/opengl/libobs-opengl/: CMakeLists.txt
core/lib/streaming/: VirtualCamOutput.h
core/lib/streaming/libobs/: CMakeLists.txt
core/ml/: MLRuntime.cpp  MLRuntime.h
core/ml/legacy_vr/: SuperResolutionAdapter.cpp
core/src/audio/: CMakeLists.txt  SpatialAudio.h  SpatialAudioManager.cpp  SpatialAudioManager.h
core/src/audio/legacy_vr/: AudioManager.cpp  AudioManager.h
core/src/common/: CMakeLists.txt  IDGenerator.cpp  IDGenerator.h  test_id_generator.cpp
core/src/compositor/: CMakeLists.txt  MixerRouter.h  main.cpp
core/src/compositor/legacy_vr_core/: VRController.cpp  VRController.h
core/src/encoding/legacy_vr/: EncoderManager.cpp  EncoderManager.h  defaults.h
core/src/encoding/legacy_vr/ffmpeg/: FFmpegEncoderAdapter.cpp
core/src/pipeline/: CMakeLists.txt  FrameRouter.h  IStitcher.h
core/src/pipeline/legacy_vr/: FrameRouter.cpp
core/src/rendering/: CMakeLists.txt  FramebufferManager.cpp  FramebufferManager.h  HDRProcessor.cpp  HDRProcessor.h  IRenderEngine.h  OpenXRRuntime.h  PreviewRenderer.cpp  PreviewRenderer.h  RTXUpscaler.cpp  RTXUpscaler.h  STMapLoader.cpp  STMapLoader.h  ShimQRhi.h  StereoRenderer.cpp  StereoRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
core/src/rendering/legacy_vr_gpu/: cuda_utils.cpp  cuda_utils.h  vulkan_utils.cpp  vulkan_utils.h
core/src/rendering/legacy_vr_render/vulkan/: VulkanRenderEngine.cpp
core/src/rendering/stitch/legacy_vr/: Stitcher.cpp
core/src/scene/: CMakeLists.txt  OBJLoader.cpp  OBJLoader.h  SceneManager.cpp  SceneManager.h
core/src/scene-graph/: CMakeLists.txt  IExecutableNode.h  SceneGraphManager.cpp  SceneGraphManager.h
core/src/scene-graph/nodes/AudioNode/: AudioNode.cpp  AudioNode.h  AudioNodeFactory.cpp
core/src/scene-graph/nodes/CameraNode/: CameraNode.cpp  CameraNode.h
core/src/scene-graph/nodes/EffectNode/: EffectNode.cpp  EffectNode.h  EffectNodeFactory.cpp
core/src/scene-graph/nodes/FontNode/: FontNode.cpp  FontNode.h  FontNodeFactory.cpp
core/src/scene-graph/nodes/HeadsetOutputNode/: HeadsetOutputNode.h
core/src/scene-graph/nodes/ImageNode/: ImageNode.cpp  ImageNode.h  ImageNodeFactory.cpp
core/src/scene-graph/nodes/LLMNode/: LLMNode.cpp  LLMNode.h  LLMNodeFactory.cpp
core/src/scene-graph/nodes/MLNode/: MLNode.cpp  MLNode.h  MLNodeFactory.cpp
core/src/scene-graph/nodes/RTXUpscaleNode/: RTXUpscaleNode.cpp  RTXUpscaleNode.h
core/src/scene-graph/nodes/ScriptNode/: ScriptNode.cpp  ScriptNode.h  ScriptNodeFactory.cpp
core/src/scene-graph/nodes/ShaderNode/: ShaderNode.cpp  ShaderNode.h  ShaderNodeFactory.cpp
core/src/scene-graph/nodes/StitchNode/: StitchNode.cpp  StitchNode.h
core/src/scene-graph/nodes/TextureNode/: TextureNode.cpp  TextureNode.h  TextureNodeFactory.cpp
core/src/scene-graph/nodes/ThreeDModelNode/: ThreeDModelNode.cpp  ThreeDModelNode.h  ThreeDModelNodeFactory.cpp
core/src/scene-graph/nodes/VideoNode/: VideoNode.cpp  VideoNode.h  VideoNodeFactory.cpp
core/src/shared/: VRHeadsetProfile.h
core/src/state/: CMakeLists.txt  StateStore.cpp  StateStore.h  objectbox-model.json
core/src/state/schemas/: AnimationKeyframe.obx.cpp  BroadcastSettings.obx.cpp  SceneObject.obx.hpp  objectbox-model.h
core/src/state/schemas/ai/: GraphEvent.fbs  GraphEvent.obx.cpp  GraphEvent.obx.hpp  GraphPattern.fbs  GraphPattern.obx.cpp  GraphPattern.obx.hpp  IntentPrediction.fbs  IntentPrediction.obx.cpp  IntentPrediction.obx.hpp  objectbox-model.h
core/src/state/schemas/master/: ConnectionRule.fbs  ConnectionRule.obx.cpp  ConnectionRule.obx.hpp  IndexStore.fbs  NodeType.fbs  NodeType.obx.cpp  NodeType.obx.hpp  PipelineTemplate.fbs  PipelineTemplate.obx.cpp  PipelineTemplate.obx.hpp  objectbox-model.h
core/src/state/schemas/profile/: AnimationKeyframe.fbs  AnimationKeyframe.obx.hpp  BroadcastSettings.fbs  BroadcastSettings.obx.hpp  GraphEdge.fbs  GraphEdge.obx.cpp  GraphEdge.obx.hpp  GraphNode.fbs  GraphNode.obx.cpp  GraphNode.obx.hpp  SceneObject.fbs  SceneObject.obx.cpp  objectbox-model.h
core/src/usd_manager/: CMakeLists.txt  UsdStageManager.cpp  UsdStageManager.h
core/utilities/ipc/legacy_vr/: IPCServer.cpp
plugins/nstudio-filters/: CMakeLists.txt
ui/blueprint/nodes/: BaseNode.qml  BaseNodeController.h  CMakeLists.txt
ui/blueprint/nodes/AudioNode/AudioClip/: audioclipnode.qml
ui/blueprint/nodes/AudioNode/AudioClipFX/: audioclipfxnode.qml
ui/blueprint/nodes/AudioNode/AudioClipFXSettingsWidget/: audioclipfxsettingswidget.qml
ui/blueprint/nodes/AudioNode/AudioClipFXSourceSelectorWidget/: audioclipfxsourceselectorwidget.qml
ui/blueprint/nodes/AudioNode/AudioClipMusic/: audioclipmusicnode.qml
ui/blueprint/nodes/AudioNode/AudioClipMusicSettingsWidget/: audioclipmusicsettingswidget.qml
ui/blueprint/nodes/AudioNode/AudioClipMusicSourceSelectorWidget/: audioclipmusicsourceselectorwidget.qml
ui/blueprint/nodes/CameraNode/: CameraNode.qml
ui/blueprint/nodes/GeminiNode/: CMakeLists.txt  GeminiNode.qml
ui/blueprint/nodes/HeadsetOutputNode/: HeadsetOutputNode.qml
ui/blueprint/nodes/OnnxNode/: CMakeLists.txt  OnnxNode.qml
ui/blueprint/nodes/RTXUpscaleNode/: RTXUpscaleNode.qml
ui/blueprint/nodes/StitchNode/: StitchNode.qml  StitchNodeController.h
ui/blueprint/nodes/VideoNode/: videonode.qml
ui/blueprint/nodes/WasmNode/: CMakeLists.txt  WasmNode.qml
ui/shared_ui/scenegraph_layermixer_virtualcam/: CMakeLists.txt  LayerMixerControl.qml  SceneGraphMixerController.cpp  SceneGraphMixerController.h  SceneGraphMixerPanel.qml  VirtualCamPreview.qml
ui/shared_ui/scenegraph_layermixer_virtualcam/components/: EnvironmentLightProbe.qml  SpatialGrid.qml  SpatialImage.qml  SpatialLayer.qml  SpatialLight.qml  SpatialText3D.qml  SpatialVideoFeed.qml  SpatialVideoPlane.qml  TransformGizmo.qml
(+369 files in other folders)
